# mcp-adb-try

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec.txt  test_mock.py
examples/: basic_usage.py
mcp_adb/: __init__.py  adb_tools.py  config_manager.py  server.py
mcp_adb/config/: default.json
mcp_adb/tools/: __init__.py  adb_tools.py
tests/: conftest.py  test_adb_tools.py
